# agent-manager

./: .gitignore  GITHUB_PAGES_SETUP.md  Makefile  README.md
.github/: release-config.json
agent-manager-service/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  entrypoint.sh  go.mod  go.sum  main.go
console/: Dockerfile  Dockerfile.dev  Makefile  README.md  create-page.js  dev-start.sh  dockerignore  env-config.sh  env.example  (+1 more)
libs/amp-evaluation/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
libs/amp-evaluation/examples/langgraph-monitoring/: run_monitoring.py  test_evaluators.py
libs/amp-evaluation/samples/langgraph-monitoring/: .env.example  .gitignore  README.md  evaluators.py  requirements.txt  run_monitor.py
libs/amp-evaluation/schema/: dataset-schema-v1.0.json
libs/amp-evaluation/src/amp_evaluation/: __init__.py  config.py  dataset_schema.py  invokers.py  models.py  registry.py  runner.py
libs/amp-evaluation/src/amp_evaluation/aggregators/: __init__.py  aggregation.py  base.py  builtin.py
libs/amp-evaluation/src/amp_evaluation/dataset/: __init__.py  loader.py  schema.py
libs/amp-evaluation/src/amp_evaluation/evaluators/: __init__.py  base.py  builtin.py  config.py
libs/amp-evaluation/src/amp_evaluation/evaluators/builtin/: __init__.py  deepeval.py  standard.py
libs/amp-evaluation/src/amp_evaluation/loaders/: __init__.py  dataset_loader.py  dataset_matcher.py  trace_loader.py
libs/amp-evaluation/src/amp_evaluation/trace/: __init__.py  fetcher.py  models.py  parser.py
libs/amp-evaluation/tests/: test_aggregators.py  test_base_evaluator_coverage.py  test_config.py  test_config_descriptor.py  test_dataset_module.py  test_discovery.py  test_eval_result.py  test_eval_runner.py  test_evaluators_builtin_core.py  test_evaluators_deepeval_agent.py  test_integration.py  test_invokers.py  test_registry.py  test_registry_coverage.py  test_span_filtering.py  test_trace_models.py  test_trace_parser.py
libs/amp-evaluation/tests/fixtures/: sample_dataset.json  sample_traces.json  simple_dataset.csv
samples/finance-insight-agent/: .env.example  .gitignore  API_KEYS.md  Dockerfile  README.md  pyproject.toml
samples/finance-insight-agent/src/finance_insight_service/: __init__.py  api_server.py  crew.py
samples/finance-insight-agent/src/finance_insight_service/config/: agents.yaml  tasks.yaml
samples/finance-insight-agent/src/finance_insight_service/tools/: __init__.py  company_fundamentals_fetch.py  price_history_fetch.py  safe_python_exec.py  serpapi_news_search.py
samples/finance-insight-agent/src/ui/: PROJECT_GUIDE.md  package-lock.json  package.json
samples/finance-insight-agent/src/ui/app/: globals.css  layout.tsx  page.tsx
samples/finance-insight-agent/src/ui/app/components/: ChatComposer.tsx  ChatEmptyState.tsx  ChatView.tsx  Icon.tsx  SettingsForm.tsx  ThemeToggle.tsx  TopBar.tsx
samples/finance-insight-agent/src/ui/app/settings/: page.tsx
samples/finance-insight-agent/src/ui/lib/: api.ts
(+1076 files in other folders)
