[project]
name = "amp-evaluation"
version = "0.0.0-dev"
description = "Comprehensive evaluation framework for AI agents, monitored via WSO2 Agent Management Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "WSO2", email = "nadheesh@wso2.org" }
]
maintainers = [
    { name = "WSO2", email = "nadheesh@wso2.org" }
]
keywords = ["ai", "agents", "evaluation", "testing", "llm", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/wso2/ai-agent-management-platform"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/amp_evaluation"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=amp_evaluation --cov-report=term-missing"
